--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -12,34 +12,58 @@
 
 
     <string-array name= "title" >
-        <item>Oblicz  spalanie na 100 km </item>
+        <item>Oblicz  srednie spalanie </item>
         <item>Oblicz koszt spalonej benzyny</item>
         <item>Oblicz ilość kupionej benzyny </item>
-        <item>Oblicz przejechane kilometry</item>
+        <item>Oblicz przejechane dystans</item>
         <item>Oblicz ilosc spalonej benzyny</item>
     </string-array>
 
+
     <string-array name="subtitle">
-        <item>znając ilośc spalonej benzyny i przejechane kilometry </item>
-        <item>znając odległosc, cene i spalanie na 100 km</item>
+        <item>znając ilośc spalonej benzyny i przejechany dystans </item>
+        <item>znając odległosc, cene i srednie spalanie</item>
         <item>znając wydaną kwote i cene benzyny</item>
-        <item>znając spalone litry i spalanie na 100 km</item>
-        <item>znajac przejechane km oraz spalanie na 100 km</item>
+        <item>znając ilosc spalonej benzyny i srednie spalanie</item>
+        <item>znajac przejechany dystans i srednie spalanie</item>
     </string-array>
+
+    <string-array name="dystans">
+        <item>Kilometry</item>
+        <item>Mile</item>
+    </string-array>
+
+    <string-array name="pojemnosc">
+        <item>Litry</item>
+        <item>GaleUs</item>
+        <item>GaleEu</item>
+    </string-array>
+
 
     <string name="wrongScore">0.0</string>
     <string name="odlegloscDoPrzejechania">Odległość do przejechania</string>
     <string name="OdlegloscWKm">Odległość w km</string>
+    <string name="OdlegloscWMilach">Odległość w milach</string>
     <string name="cenaBenzyny">Cena benzyny</string>
     <string name="liczbaSpalonychLitrowNa100Km">Liczba spalanych litrów na 100 km</string>
+    <string name="liczbaSpalonychLitrowNa100Mil">Liczba spalanych litrów na 100 mil</string>
+    <string name="liczbaSpalonychGalonowUsNa100Km">Liczba spalanych galonowUs na 100 km</string>
+    <string name="liczbaSpalonychGalonowUsNa100Mil">Liczba spalanych galonowUs na 100 mil</string>
+    <string name="liczbaSpalonychGalonowUeNa100Mil">Liczba spalanych galonowUe na 100 mil</string>
+    <string name="liczbaSpalonychGalonowUeNa100Km">Liczba spalanych galonowUe na 100 km</string>
     <string name="kosztSpalonejBenzyny">Koszt spalonej benzyny</string>
     <string name="cena">Cena</string>
     <string name="spalanie">spalanie</string>
     <string name="kwotaWydanychPieniedzyNaBenzyne">Kwota wydanych pieniędzy na benzyne</string>
     <string name="kwota">kwota</string>
     <string name="iloscSpalonejBenzynyWLitrach">Ilość spalonej benzyny w litrach</string>
+    <string name="iloscSpalonejBenzynyWGalachUs">Ilość spalonej benzyny w galachUs</string>
+    <string name="iloscSpalonejBenzynyWGalachUe">Ilość spalonej benzyny w galachUe</string>
     <string name="iloscPrzejechanychKilometrow">Ilość przejechanych kilometrów</string>
+    <string name="iloscPrzejechanychMil">Ilość przejechanych mil</string>
     <string name="spalonePaliwo">Spalone paliwo</string>
     <string name="przejechaneKilometry">Przejechane kilometry</string>
+    <string name="przejechaneMile">Przejechane mile</string>
     <string name="spalanieNa100Kilometrow">Spalanie na 100 kilometrów</string>
+    <string name="spalanieNa100Mil">Spalanie na 100 mil</string>
 </resources>
